k8s/app-simple.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workflow
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflow-backend
  namespace: workflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workflow-backend
  template:
    metadata:
      labels:
        app: workflow-backend
    spec:
      containers:
      - name: backend
        image: 542088537076.dkr.ecr.eu-west-1.amazonaws.com/workflow-backend:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: workflow-service
  namespace: workflow
spec:
  selector:
    app: workflow-backend
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080
  type: NodePort
